# av2

./: CMakeLists.txt  README.md  instrucoes.txt
database/: carros.bak  clientes.bak  locacoes.bak  vendas.csv
src/: main.c
src/acoes/: acoes.h  clientesAcoes.c  locacoesAcoes.c  veiculosAcoes.c
src/database/clientes/: clientesDB.c  clientesDB.h
src/database/locacoes/: locacoesDB.c  locacoesDB.h
src/database/veiculos/: veiculosDB.c  veiculosDB.h
src/database/vendas/: vendasDB.c  vendasDB.h
src/menu/: menu.c  menu.h
src/util/: collections.c  collections.h  functions.c  functions.h  structs.c  structs.h  util.h
src/util/scan/: scan.c  scan.h
